add schemas through the generator
